--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test.android": "wdio ./test/configs/wdio.mobile.chrome.local.conf.js",
-    "test.ios": "wdio ./test/configs/wdio.mobile.safari.local.conf.js"
+    "test.ios": "wdio ./test/configs/wdio.mobile.safari.local.conf.js",
+    "test.sauce.sim.ios": "wdio test/configs/wdio.mobile.safari.sauce.sim.conf.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/register": "^7.6.2",
-    "@wdio/appium-service": "^5.13.2",
-    "@wdio/cli": "^5.14.4",
-    "@wdio/jasmine-framework": "^5.14.4",
-    "@wdio/local-runner": "^5.14.4",
-    "@wdio/spec-reporter": "^5.14.4",
-    "@wdio/sync": "^5.14.4"
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/register": "^7.13.14",
+    "@wdio/appium-service": "^7.3.1",
+    "@wdio/cli": "^7.3.1",
+    "@wdio/jasmine-framework": "^7.3.1",
+    "@wdio/local-runner": "^7.3.1",
+    "@wdio/sauce-service": "^7.3.1",
+    "@wdio/spec-reporter": "^7.3.1",
+    "@wdio/sync": "^7.3.1"
   }
 }
