--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test.local.ios": "wdio ./test/configs/wdio.mobile.safari.local.conf.js",
     "test.sauce.emu.android.eu": "REGION=eu wdio test/configs/wdio.mobile.chrome.sauce.emu.conf.js",
     "test.sauce.emu.android.us": "wdio test/configs/wdio.mobile.chrome.sauce.emu.conf.js",
+    "test.sauce.rdc.android.eu": "REGION=eu wdio test/configs/wdio.mobile.chrome.sauce.rdc.conf.js",
+    "test.sauce.rdc.ios.eu": "REGION=eu wdio test/configs/wdio.mobile.safari.sauce.rdc.conf.js",
     "test.sauce.sim.ios.eu": "REGION=eu wdio test/configs/wdio.mobile.safari.sauce.sim.conf.js",
     "test.sauce.sim.ios.us": "wdio test/configs/wdio.mobile.safari.sauce.sim.conf.js"
   },
@@ -15,16 +17,16 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/register": "^7.13.14",
-    "@wdio/appium-service": "^7.4.2",
-    "@wdio/cli": "^7.4.2",
-    "@wdio/jasmine-framework": "^7.4.2",
-    "@wdio/local-runner": "^7.4.2",
-    "@wdio/sauce-service": "^7.4.2",
-    "@wdio/spec-reporter": "^7.4.3",
-    "@wdio/sync": "^7.4.2"
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/register": "^7.13.16",
+    "@wdio/appium-service": "^7.6.0",
+    "@wdio/cli": "^7.6.0",
+    "@wdio/jasmine-framework": "^7.6.0",
+    "@wdio/local-runner": "^7.6.0",
+    "@wdio/sauce-service": "^7.6.0",
+    "@wdio/spec-reporter": "^7.6.0",
+    "@wdio/sync": "^7.6.0"
   }
 }
